--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/cPreview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:id="@+id/cPreview">
+        android:orientation="vertical">
 
 
     </LinearLayout>
@@ -18,22 +18,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom|center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnCam"
-            android:textSize="15sp"
-            android:text="Take Photo"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            android:background="@drawable/ic_rectangle"
+            android:gravity="bottom|center"
+            android:orientation="vertical">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnSwitch"
-            android:layout_marginLeft="0dp"
-            android:textSize="15sp"
-            android:text="Switch Camera"/>
+            <Button
+                android:id="@+id/btnCam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Take Photo"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/btnSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:text="Switch Camera"
+                android:textSize="15sp"
+                android:layout_marginStart="0dp" />
+        </LinearLayout>
 
     </LinearLayout>
 
