--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,23 +14,33 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom|center"
+        android:gravity="bottom"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="225dp"
+            android:layout_height="224dp"
             android:background="@drawable/ic_rectangle"
-            android:gravity="bottom|center"
+            android:gravity="bottom"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/prediction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Prediction"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/btnCam"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
                 android:text="Take Photo"
                 android:textSize="15sp" />
 
@@ -38,10 +48,12 @@
                 android:id="@+id/btnSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginStart="0dp"
                 android:layout_marginLeft="0dp"
                 android:text="Switch Camera"
-                android:textSize="15sp"
-                android:layout_marginStart="0dp" />
+                android:textSize="15sp" />
+
         </LinearLayout>
 
     </LinearLayout>
